B-F Backup Sandbox 30.4.12/src/objects/Key_Task__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsQualitative__c</fullName>
        <description>PARX - Jochen Schrader: P00002 need this formular to count qualitative records</description>
        <formula>if( ISPICKVAL(Key_Task_Template__r.Category__c,&quot;qualitative&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsQualitative</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsQuantitative__c</fullName>
        <description>PARX - Jochen Schrader:  P00002 need this field to count quantitative key tasks</description>
        <formula>If(ISPICKVAL( Key_Task_Template__r.Category__c ,&quot;quantitative&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsQuantitative</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Task_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Task Template</label>
        <referenceTo>Key_Task_Template__c</referenceTo>
        <relationshipLabel>Key Tasks</relationshipLabel>
        <relationshipName>Key_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Met_With__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Met With</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Key Tasks</relationshipLabel>
        <relationshipName>Key_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outlet_Visit__c</fullName>
        <label>Outlet Visit</label>
        <referenceTo>Outlet_Visit__c</referenceTo>
        <relationshipLabel>Key Tasks</relationshipLabel>
        <relationshipName>Key_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Key Task</label>
    <nameField>
        <label>Key Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>